# claude-plugins

./: .gitignore  README.md  install.sh  publish.sh
plugins/stems-to-mixdown/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
plugins/stems-to-mixdown/.claude-plugin/: plugin.json
plugins/stems-to-mixdown/docs/: IMPROVEMENT-PLAN-v1.3.md  IMPROVEMENT-PLAN.md  REVIEW-2026-05.md  why.md
plugins/stems-to-mixdown/docs/archive/: IMPROVEMENT-PLAN-v1.3.md  IMPROVEMENT-PLAN.md
plugins/stems-to-mixdown/docs/decisions/: 2026-04-additions-review.md  2026-05-cmd-9-revision.md  index.md
plugins/stems-to-mixdown/docs/research/: 2A-pan-law-coefficients.md  2B-mono-fold-policy.md  2C-reference-loudness.md  2D-demucs-sibling.md  2E-alignment-heuristics.md
plugins/stems-to-mixdown/scripts/: _classification.py  _manifest.py  _measure.py  _version.py  analyze.py  discover.py  identify.py  import_pt_track_names.py  mix.py  plan.py  run.py  sanity.py  scaffold_manifest.py  verify.py
plugins/stems-to-mixdown/skills/mixdown/: SKILL.md
plugins/stems-to-mixdown/skills/stems-to-mixdown/: SKILL.md
plugins/stems-to-mixdown/stems_to_mixdown/: __init__.py  _classification.py  _enrichment.py  _manifest.py  _mix_bundle.py  _mix_extras.py  _mix_helpers.py  _mix_normalize.py  _mix_sidecar.py  _plan_format_decision.py  _plan_pan.py  _plan_render.py  _version.py  analyze.py  discover.py  identify.py  import_pt_track_names.py  mix.py  plan.py  run.py  sanity.py  scaffold_manifest.py  verify.py
plugins/stems-to-mixdown/tests/: README.md  _invariants.py  assert-audio-shas.sh  diff-baseline.sh  run-all-passes.sh  test_codec_detection.py  test_format_decision.py  test_master_reference.sh  test_pan_distribution.py  test_perceptual_outputs.py  test_run_in_process.py
plugins/stems-to-mixdown/tests/baselines/: 24-in-32.analysis.json  24-in-32.plan.json  dirty-inputs.analysis.json  dirty-inputs.plan.json  expected-audio-md5s.txt  mixed-rates.analysis.json  mixed-rates.plan.json  (+4 more)
(+261 files in other folders)
